<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhotoViewScreen">

    <Button
        android:id="@+id/button13"
        android:layout_width="71dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/rounded_button_yellow"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:onClick="startBack"
        android:text="@string/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="407dp"
        android:layout_height="790dp"
        android:contentDescription="@string/tour_mode_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.508"
        app:srcCompat="@drawable/challenge_example" />

    <Button
        android:id="@+id/button2"
        android:layout_width="218dp"
        android:layout_height="53dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="32dp"
        android:onClick="startChallengeView"
        android:text="@string/challenge_button"
        android:background="@drawable/rounded_button_blue"
        android:textColor="#ffe699"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>